--- a/Section_14.ipynb
+++ b/Section_14.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8JII60zpURpd5QzOjCkwl",
+      "authorship_tag": "ABX9TyOb0HhYtm7sV4oEWb2XQLbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,318 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "data = [\n",
+        "    {\n",
+        "        'name': 'Instagram',\n",
+        "        'follower_count': 346,\n",
+        "        'description': 'Social media platform',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Cristiano Ronaldo',\n",
+        "        'follower_count': 215,\n",
+        "        'description': 'Footballer',\n",
+        "        'country': 'Portugal'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Ariana Grande',\n",
+        "        'follower_count': 183,\n",
+        "        'description': 'Musician and actress',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Dwayne Johnson',\n",
+        "        'follower_count': 181,\n",
+        "        'description': 'Actor and professional wrestler',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Selena Gomez',\n",
+        "        'follower_count': 174,\n",
+        "        'description': 'Musician and actress',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Kylie Jenner',\n",
+        "        'follower_count': 172,\n",
+        "        'description': 'Reality TV personality and businesswoman and Self-Made Billionaire',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Kim Kardashian',\n",
+        "        'follower_count': 167,\n",
+        "        'description': 'Reality TV personality and businesswoman',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Lionel Messi',\n",
+        "        'follower_count': 149,\n",
+        "        'description': 'Footballer',\n",
+        "        'country': 'Argentina'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Beyoncé',\n",
+        "        'follower_count': 145,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Neymar',\n",
+        "        'follower_count': 138,\n",
+        "        'description': 'Footballer',\n",
+        "        'country': 'Brasil'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'National Geographic',\n",
+        "        'follower_count': 135,\n",
+        "        'description': 'Magazine',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Justin Bieber',\n",
+        "        'follower_count': 133,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Canada'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Taylor Swift',\n",
+        "        'follower_count': 131,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Kendall Jenner',\n",
+        "        'follower_count': 127,\n",
+        "        'description': 'Reality TV personality and Model',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Jennifer Lopez',\n",
+        "        'follower_count': 119,\n",
+        "        'description': 'Musician and actress',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Nicki Minaj',\n",
+        "        'follower_count': 113,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Trinidad and Tobago'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Nike',\n",
+        "        'follower_count': 109,\n",
+        "        'description': 'Sportswear multinational',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Khloé Kardashian',\n",
+        "        'follower_count': 108,\n",
+        "        'description': 'Reality TV personality and businesswoman',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Miley Cyrus',\n",
+        "        'follower_count': 107,\n",
+        "        'description': 'Musician and actress',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Katy Perry',\n",
+        "        'follower_count': 94,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Kourtney Kardashian',\n",
+        "        'follower_count': 90,\n",
+        "        'description': 'Reality TV personality',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Kevin Hart',\n",
+        "        'follower_count': 89,\n",
+        "        'description': 'Comedian and actor',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Ellen DeGeneres',\n",
+        "        'follower_count': 87,\n",
+        "        'description': 'Comedian',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Real Madrid CF',\n",
+        "        'follower_count': 86,\n",
+        "        'description': 'Football club',\n",
+        "        'country': 'Spain'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'FC Barcelona',\n",
+        "        'follower_count': 85,\n",
+        "        'description': 'Football club',\n",
+        "        'country': 'Spain'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Rihanna',\n",
+        "        'follower_count': 81,\n",
+        "        'description': 'Musician and businesswoman',\n",
+        "        'country': 'Barbados'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Demi Lovato',\n",
+        "        'follower_count': 80,\n",
+        "        'description': 'Musician and actress',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': \"Victoria's Secret\",\n",
+        "        'follower_count': 69,\n",
+        "        'description': 'Lingerie brand',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Zendaya',\n",
+        "        'follower_count': 68,\n",
+        "        'description': 'Actress and musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Shakira',\n",
+        "        'follower_count': 66,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Colombia'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Drake',\n",
+        "        'follower_count': 65,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Canada'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Chris Brown',\n",
+        "        'follower_count': 64,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'LeBron James',\n",
+        "        'follower_count': 63,\n",
+        "        'description': 'Basketball player',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Vin Diesel',\n",
+        "        'follower_count': 62,\n",
+        "        'description': 'Actor',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Cardi B',\n",
+        "        'follower_count': 67,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'David Beckham',\n",
+        "        'follower_count': 82,\n",
+        "        'description': 'Footballer',\n",
+        "        'country': 'United Kingdom'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Billie Eilish',\n",
+        "        'follower_count': 61,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Justin Timberlake',\n",
+        "        'follower_count': 59,\n",
+        "        'description': 'Musician and actor',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'UEFA Champions League',\n",
+        "        'follower_count': 58,\n",
+        "        'description': 'Club football competition',\n",
+        "        'country': 'Europe'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'NASA',\n",
+        "        'follower_count': 56,\n",
+        "        'description': 'Space agency',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Emma Watson',\n",
+        "        'follower_count': 56,\n",
+        "        'description': 'Actress',\n",
+        "        'country': 'United Kingdom'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Shawn Mendes',\n",
+        "        'follower_count': 57,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Canada'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Virat Kohli',\n",
+        "        'follower_count': 55,\n",
+        "        'description': 'Cricketer',\n",
+        "        'country': 'India'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Gigi Hadid',\n",
+        "        'follower_count': 54,\n",
+        "        'description': 'Model',\n",
+        "        'country': 'United States'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Priyanka Chopra Jonas',\n",
+        "        'follower_count': 53,\n",
+        "        'description': 'Actress and musician',\n",
+        "        'country': 'India'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': '9GAG',\n",
+        "        'follower_count': 52,\n",
+        "        'description': 'Social media platform',\n",
+        "        'country': 'China'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Ronaldinho',\n",
+        "        'follower_count': 51,\n",
+        "        'description': 'Footballer',\n",
+        "        'country': 'Brasil'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Maluma',\n",
+        "        'follower_count': 50,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Colombia'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Camila Cabello',\n",
+        "        'follower_count': 49,\n",
+        "        'description': 'Musician',\n",
+        "        'country': 'Cuba'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'NBA',\n",
+        "        'follower_count': 47,\n",
+        "        'description': 'Club Basketball Competition',\n",
+        "        'country': 'United States'\n",
+        "    }\n",
+        "]\n"
+      ],
       "metadata": {
-        "id": "_Jmq9afLakQp"
+        "id": "b1bhA8ZHdNtA"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "from game_data import data\n",
         "import random\n",
@@ -93,8 +400,45 @@
         "      game_should_continue = False\n",
         "      print(f\"Sorry, that's wrong. Final score: {score}\")\n",
         "\n",
-        "game()"
-      ]
+        "game()\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "FAQ: Why does choice B always become choice A in every round, even when A had more followers? \n",
+        "\n",
+        "Suppose you just started the game and you are comparing the followers of A - Instagram (364k) to B - Selena Gomez (174k). Instagram has more followers, so choice A is correct. However, the subsequent comparison should be between Selena Gomez (the new A) and someone else. The reason is that everything in our list has fewer followers than Instagram. If we were to keep Instagram as part of the comparison (as choice A) then Instagram would stay there for the rest of the game. This would be quite boring. By swapping choice B for A each round, we avoid a situation where the number of followers of choice A keeps going up over the course of the game. Hope that makes sense :-)\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Generate a random account from the game data.\n",
+        "\n",
+        "# Format account data into printable format.\n",
+        "\n",
+        "# Ask user for a guess.\n",
+        "\n",
+        "# Check if user is correct.\n",
+        "## Get follower count.\n",
+        "## If Statement\n",
+        "\n",
+        "# Feedback.\n",
+        "\n",
+        "# Score Keeping.\n",
+        "\n",
+        "# Make game repeatable.\n",
+        "\n",
+        "# Make B become the next A.\n",
+        "\n",
+        "# Add art.\n",
+        "\n",
+        "# Clear screen between rounds."
+      ],
+      "metadata": {
+        "id": "ua1EWZ-1dRba"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
